add outlets and actions

--- a/RandomNumberGenerator/Base.lproj/Main.storyboard
+++ b/RandomNumberGenerator/Base.lproj/Main.storyboard
@@ -36,6 +36,9 @@
                                 <state key="normal" title="Choose number between 0 and 100">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="chooseButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cZZ-vN-1WF"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="77" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kCf-e9-1Vx">
                                 <rect key="frame" x="145" y="610" width="100" height="50"/>
@@ -60,6 +63,11 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="93F-QL-Ek2" secondAttribute="bottom" constant="20" id="x4S-oV-SuV"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="chooseButton" destination="93F-QL-Ek2" id="DJF-fZ-ZqO"/>
+                        <outlet property="picker" destination="FP6-sB-xhE" id="CxP-1h-CJl"/>
+                        <outlet property="resultLabel" destination="kCf-e9-1Vx" id="6eu-2i-1pm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
